# mpsci

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: tests.yml
config/: README.txt
dev-notes/: testing.txt
dev-tools/check-api/: show-distr-funcs.py
doc/: README.txt  builddocs.sh  conf.py  myautogen.py
doc/sphinxext/: README.rst  resubber.py
mpsci/: __init__.py
mpsci/distributions/: __init__.py  _common.py  _weibull_common.py  argus.py  benini.py  benktander1.py  benktander2.py  beta.py  betabinomial.py  betaprime.py  binomial.py  burr12.py  cauchy.py  chi.py  chi2.py  cosine.py  dirichlet.py  exponweib.py  f.py  fishers_noncentral_hypergeometric.py  folded_normal.py  gamma.py  gamma_gompertz.py  gauss_kuzmin.py  genexpon.py  genextreme.py  genhyperbolic.py  geninvgauss.py  genpareto.py  gompertz.py  gumbel_max.py  gumbel_min.py  half_logistic.py  hypergeometric.py  hypsecant.py  invchi2.py  invgamma.py  invgauss.py  kumaraswamy.py  laplace.py  (+31 more)
mpsci/distributions/continuous/: __init__.py  cosine.py  gamma.py  genextreme.py  geninvgauss.py  lognormal.py  ncx2.py  normal.py  rice.py
mpsci/distributions/discrete/: __init__.py  fishers_noncentral_hypergeometric.py  hypergeometric.py  multivariate_hypergeometric.py
mpsci/distributions/tests/: _expect.py  _utils.py  test_argus.py  test_benini.py  test_benktander1.py  test_benktander2.py  test_beta.py  test_betabinomial.py  test_betaprime.py  test_binomial.py  test_burr12.py  test_cauchy.py  test_chi.py  test_chi2.py  test_common.py  test_cosine.py  test_dirichlet.py  test_exponweib.py  test_f.py  test_fishers_noncentral_hypergeometric.py  test_folded_normal.py  test_gamma.py  test_gamma_gompertz.py  test_gauss_kuzmin.py  test_genexpon.py  test_genextreme.py  test_genhyperbolic.py  test_geninvgauss.py  test_genpareto.py  test_gompertz.py  test_gumbel_max.py  test_gumbel_min.py  test_half_logistic.py  test_hypergeometric.py  test_hypsecant.py  test_invchi2.py  test_invgamma.py  test_invgauss.py  test_kumaraswamy.py  test_laplace.py  (+31 more)
mpsci/fun/: __init__.py  _boxcox.py  _debye.py  _digammainv.py  _faddeevaw.py  _hermite_e.py  _inv_reg_inc_beta.py  _legendre.py  _linspace.py  _logbeta.py  _logbinomial.py  _logsumexp.py  _marcumq.py  _powm1.py  _spherical_bessel.py  _wright_bessel.py  _xlogy.py  _yeo_johnson.py
mpsci/fun/tests/: test_betaincinv.py  test_boxcox.py  test_debye.py  test_digammainv.py  test_faddeevaw.py  test_hermit_e.py  test_linspace.py  test_logbeta.py  test_logbinomial.py  test_logsumexp.py  test_marcumq.py  test_powm1.py  test_roots_legendre.py  test_spherical_bessel.py  test_wright_bessel.py  test_yeo_johnson.py
mpsci/polyapprox/: __init__.py  _inverse_approximant_tools.py
mpsci/polyapprox/tests/: test_polyapprox.py
mpsci/signal/: __init__.py  _mpsig.py
mpsci/stats/: __init__.py  _anova.py  _basic.py  _boxcox.py  _boxcox_mle.py  _fisher_exact.py  _goftests.py  _odds_ratio.py  _pearsonr.py  _yeo_johnson.py  _yeojohnson.py  _yeojohnson_mle.py
mpsci/stats/distributions/: __init__.py  exponweib.py  gamma.py  genextreme.py  geninvgauss.py  hypergeometric.py  ncx2.py  normal.py  rice.py
mpsci/stats/distributions/tests/: test_ncx2.py
mpsci/stats/tests/: test_anova.py  test_basic.py  test_boxcox.py  test_boxcox_mle.py  test_goftests.py  test_odds_ratio.py  test_pearsonr.py  test_yeo_johnson.py  test_yeojohnson.py  test_yeojohnson_mle.py
