[project]
name = "mpsci"
version = "0.0.1.dev95"
dependencies = [
    "mpmath",
]
description = "Assorted statistical and mathematical functions implemented using mpmath."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}
authors = [
  {name = 'Warren Weckesser', email = 'warren.weckesser+mpsci@gmail.com'},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/WarrenWeckesser/mpsci"
"Bug Tracker" = "https://github.com/WarrenWeckesser/mpsci/issues"
"Documentation" = "https://warrenweckesser.github.io/mpsci/index.html"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mpsci",
            "mpsci.distributions",
            "mpsci.fun",
            "mpsci.stats",
            "mpsci.distributions.tests",
            "mpsci.fun.tests",
            "mpsci.stats.tests"]
